tests/baselines/reference/parserUnaryExpression3.errors.txt
parserUnaryExpression3.ts(1,3): error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.


==== parserUnaryExpression3.ts (1 errors) ====
    ++[0];
      ~~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.